fix popup behind overlay error + cleanup login popup and signup popup on success + add tieField to history

--- a/frontend/app/games/pong/pongCanvas/pongCanvas.css
+++ b/frontend/app/games/pong/pongCanvas/pongCanvas.css
@@ -1,6 +1,6 @@
 
 /* Full-screen overlay for the game */
-.overlay {
+/* .overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,8 +10,8 @@
     display: none;
     align-items: center;
     justify-content: center;
-    z-index: 1000;
-}
+    z-index: 5;
+} */
 
 .game-container {
     width: 80vw;
